--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -4,8 +4,8 @@ In all previous Chapters, we discussed situations for which the order parameters
 For GeTe, the polarization and resulting spin splitting were fixed.
 Even though the thermal excitation of polar phonons can lead to a non-trivial dynamical splitting in the band structure, on the slower phonon timescale electrons can still be assumed to be at the instantaneous equilibrium with the ionic potential \cite{Monserrat2017}.
 This is because, as alluded to before, the electronic dynamics is generally many orders of magnitude faster than the atomic ones, meaning that the Born-Oppenheimer approximation remains valid.
-In the study on GdMn$_2$O$_5$, the changing magnetic structure and corresponding ferroelectric polarization was orders of magnitude faster than the slowly varying applied magnetic field, again allowing for an equilibrium description.
-This allows for further research into the dynamics of these effects, since they are certainly accessible by using faster varying magnetic fields.
+In the study on GdMn$_2$O$_5$, the changing magnetic structure and corresponding ferroelectric polarization were orders of magnitude faster than the slowly varying applied magnetic field, again allowing for an equilibrium description.
+This allows for further research into the dynamics of these effects since they are certainly accessible by using faster varying magnetic fields.
 % In the case of BaTiO$_3$ with the softening domain wall, while the experiments were dependent on a resonance frequency, the applied perturbation was found to not markedly change the properties of the material, warranting again a static description.
 %\lp{hmmmmm}
 
@@ -17,7 +17,7 @@ Due to exchange striction, this SDW then causes a periodic lattice distortion (P
 The SDW thermalizes on very short timescales (below 100 fs), since it is constituted by electrons \cite{Nicholson2016}.
 The dynamics of the PLD is instead related to the motion of massive ions and is therefore much slower, with generally a ps characteristic timescale.
 The system as a whole only reaches full equilibrium with the substrate after nanoseconds \cite{Singer2015prb}. 
-By using ultrafast pump-probe experiments that have a sub picosecond resolution, these PLD dynamics can be studied and, more importantly, controlled very precisely through excitation of the much faster responding SDW.
+By using ultrafast pump-probe experiments that have a sub-picosecond resolution, these PLD dynamics can be studied and, more importantly, controlled very precisely through excitation of the much faster responding SDW.
 
 In this Chapter we explore and investigate the additional possibilities opened up by applying a sequence of optical excitations spaced at various points in time.
 We start by demonstrating the experimental observations made by applying not one, but two optical pulses to the SDW, and how their spacing changes drastically the response of the probed PLD.
@@ -50,16 +50,16 @@ It is important to realize that the SDW order is not directly accessible through
 \begin{figure}
 	\centering
 \IncludeGraphics{experimental1}
-\caption{\label{fig:Cr_experimental1}{\bf Pump-Pump delay dependent interference.} a) Experimental map of PLD amplitude before and after excitation of two pulses with a fluence of 1.45 mJ/cm$^2$. The green box highlights the area of lower oscillation amplitude of the PLD when the temperature of the SDW exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of second pulse. The dots denote the experimentally measured values, and the graphs the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for further details).}
+\caption{\label{fig:Cr_experimental1}{\bf Pump-Pump delay-dependent interference.} a) Experimental map of PLD amplitude before and after excitation of two pulses with a fluence of 1.45 mJ/cm$^2$. The green box highlights the area of lower oscillation amplitude of the PLD when the temperature of the SDW exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of the second pulse. The dots denote the experimentally measured values, and the graphs the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for further details).}
 \end{figure}
 \begin{figure}
 	\centering
 \IncludeGraphics[width=0.78\textwidth]{experimental2}
-\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
+\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the PLD amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the PLD in the constructive and destructive pump-pump delay conditions, similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red line marks the arrival time of the second pulse. In these measurements the SDW is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
 \end{figure}
 \\\\
 We can observe that the PLD has an oscillation time period of approximately 450 fs, and a damping time of around 3 ps.
-In panel (a) of Fig.~\ref{fig:Cr_experimental1}, the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period, indicates the fast restoration of the oscillation equilibrium. 
+In panel (a) of Fig.~\ref{fig:Cr_experimental1}, the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period indicates the fast restoration of the oscillation equilibrium. 
 This means that the heat transfer rate between the electrons that constitute the SDW and the bath is relatively high, leading to a thermalization between the two within a picosecond after heating.
 This partially restores the SDW which in turn leads to the partial restoration of the oscillation equilibrium.
 Further thermalization between the Cr lattice and the substrate occurs on a nanosecond timescale, beyond the scope of these experiments.
@@ -77,7 +77,7 @@ Furthermore, if the second pulse arrives before the SDW had time to cool down, a
 As will be further discussed below, this indicates that the combined fluence of the two pulses was high enough to raise the temperature of the SDW above $T_N$.
 \\\\
 The influence of the pulse's fluence is detailed in Fig.~\ref{fig:Cr_experimental2}.
-Experiments performed with a high fluence initial pulse, cause the SDW to heat up and remain above $T_N$ for the entirety of the experiment, demonstrating that the impact of the second pulse in this case is completely lost. Indeed, varying its timing changes nothing to the oscillation of the PLD, as can be seen from Fig.~\ref{fig:Cr_experimental2}(c).
+Experiments performed with a high fluence initial pulse, cause the SDW to heat up and remain above $T_N$ for the entirety of the experiment, demonstrating that the impact of the second pulse, in this case, is completely lost. Indeed, varying its timing changes nothing to the oscillation of the PLD, as can be seen from Fig.~\ref{fig:Cr_experimental2}(c).
 If control is the goal, it is thus important that the SDW is allowed to cool down below $T_N$ before exciting it again.
 The SDW order parameter, furthermore, depends strongest on temperature when it is close to the critical point where it varies as the square root, thus increasing the pulse efficiency in that temperature region.
 These considerations will be discussed in greater detail in Section~\ref{sec:Cr_results}, after the theoretical description is given.
@@ -92,7 +92,7 @@ This supports our previous claim that the optical pulses excite the thin film ho
 % 	H = \sum_{<i,j>}t_{ij} c_{i,\sigma}^{\dag} c_{j,\sigma}  +  U \sum_i U n_i^{\uparrow} n_i^{\downarrow}
 % \end{equation}
 % where $<i,j>$ denotes nearest neighbors, and $t_{ij}$ the hopping between them, and $U_i$ the on-site coulomb repulsion active when the on-site orbital is occupied by more than one electron. 
-% In the usual case, $U >> t_{ij}$ and thus a Shrieffer-Wolf transformation can be performed to separate the high energy from the low energy subspace. This amounts to performing a second order perturbation theory, allowing the Hubbard model to effectively be rewritten in terms of the on-site spins, leading to the well-known Heisenberg model:
+% In the usual case, $U >> t_{ij}$ and thus a Shrieffer-Wolf transformation can be performed to separate the high energy from the low energy subspace. This amounts to performing a second-order perturbation theory, allowing the Hubbard model to effectively be rewritten in terms of the on-site spins, leading to the well-known Heisenberg model:
 % \begin{equation}
 % 	\label{eq:Heisenberg}
 % 	H = \sum_{<i,j>}J_{ij} \mathbf{S}_i \cdot \mathbf{S}_j,
@@ -107,8 +107,8 @@ The timescale for this thermalization was measured by high-resolution ARPES to b
 The second subsystem is that of the lattice phonons which act as a heat bath.
 In this case, we exclude the mode that describes the PLD oscillation, since it is not thermal on the timescales we are interested in. As was mentioned before, its characteristic timescale is on the order of picoseconds rather than the femtosecond timescales of the electronic SDW.
 
-Similarly to the electrons, the phonon bath harbors strong interactions within itself allowing us to assign a second temperature $T_b$ to it.
-The interaction between the electrons at $T_L$ and the bath at $T_b$ is what leads to the heat transfer between them, resulting in an equilibration between the two subsystems within 1 ps.
+Similar to the electrons, the phonon bath harbors strong interactions within itself allowing us to assign a second temperature $T_b$ to it.
+The interaction between the electrons at $T_L$ and the bath at $T_b$ is what leads to the heat transfer between them, resulting in equilibration between the two subsystems within 1 ps.
 We thus assume that the PLD mode is completely detached from the other phonons, instead only interacting strongly with the SDW order parameter $L$ (see below). 
 \\\\
 The evolution of the temperatures can be described by the so-called two temperature model:
@@ -124,24 +124,24 @@ Finally, the heat injected by the pulses is modeled by a Gaussian $Q_{ph}(t) = A
 \\\\
 The changes to $T_L$ through heating and subsequent cooling affects the SDW amplitude $L$ and indirectly the PLD one $y$, as described by a Landau-type theory~\cite{Khomskii2010}.
 These order parameters are related to the Fourier component of the SDW with wavevector $q$, i.e. $L = S_q$, and to the acoustic phonon amplitude $y = u_{2q}$.
-The phonon mode is the second harmonic ($2q$) of the SDW because the exchange striction only acts on the magnitude of the spins, not on the phase, so that during one period of the SDW oscillation two periods of the PLD occur.
+The phonon mode is the second harmonic ($2q$) of the SDW because the exchange striction only acts on the magnitude of the spins, not on the phase so that during one period of the SDW oscillation two periods of the PLD occur.
 This leads to the following expression for the free energy:
 \begin{equation}
 	\label{eq:Cr_landau}
 	f(L, y, T_L) = \frac{\alpha}{2}(T_L - T_N) L^2 + \frac{\beta}{4} L^4 - g L^2 y + \frac{\rho y_0^2 \omega_0^2}{2} y^2 + \frac{b}{4} y^4,
 \end{equation}
 where $L$, $y$ and $T_L$ are the time dependent variables, and all coefficients are taken positive.
-The double well potential that causes the SDW phase transition is characterized by the coefficients $\alpha$ and $\beta$,  and critical temperature $T_N$ below which the SDW order sets in.
+The double-well potential that causes the SDW phase transition is characterized by the coefficients $\alpha$ and $\beta$,  and critical temperature $T_N$ below which the SDW order sets in.
 The coupling between $L$ and $y$ due to exchange striction is described by the term with $g$.
-Only even orders of $L$ appear in the free energy, since the energy is time reversal even, but $L$ is time reversal odd.
-The PLD order parameter $y$ with density $\rho$ is described by the harmonic oscillator potential with frequency $\omega_0$ and displacement amplitude $y_0$, and has a vanishing equilibrium value in the absence of $L$, since it is not the primary order parameter.
-The fourth order term $\frac{b}{4}y^4$ is only included to provide a better fit to some of the anharmonic features observed by the experiment.
-It is not needed in order to bound the energy potential in terms of $y$, as would be required if $y$ was the primary order parameter with a negative second order coefficient $a$, like in the case of $\alpha(T-T_N)$ for $L$.
+Only even orders of $L$ appear in the free energy since the energy is time-reversal even, but $L$ is time-reversal odd.
+The PLD order parameter $y$ with density $\rho$ is described by the harmonic oscillator potential with frequency $\omega_0$ and displacement amplitude $y_0$, and has a vanishing equilibrium value in the absence of $L$ since it is not the primary order parameter.
+The fourth-order term $\frac{b}{4}y^4$ is only included to provide a better fit to some of the anharmonic features observed by the experiment.
+It is not needed in order to bound the energy potential in terms of $y$, as would be required if $y$ was the primary order parameter with a negative second-order coefficient $a$, like in the case of $\alpha(T-T_N)$ for $L$.
 It is the interaction with the primary order parameter $L$ that provides the ``force'' $F = -df/dy = gL^2$ to move $y$ up in its own harmonic potential, leading ultimately to the nonzero equilibrium value.
 While this sounds trivial, this concept is key in order to understand the observed behavior.
 
 As mentioned before, the dynamics of $L$ are much faster than those of $y$.
-In writing down the Lagrangian of the system we therefore choose to take $L$ to be always at its instantaneous minimum in the potential of Eq.~\eqref{eq:Cr_landau}, characterized at each time by the values of $y$ and $T_L$.
+In writing down the Lagrangian of the system we, therefore, choose to take $L$ to be always at its instantaneous minimum in the potential of Eq.~\eqref{eq:Cr_landau}, characterized at each time by the values of $y$ and $T_L$.
 This can be achieved by solving $\frac{\partial f}{\partial L} = 0$, leading to:
 \begin{equation}
 	\label{eq:Cr_L0}
@@ -170,7 +170,7 @@ One obvious remark can be made here: to be completely exact, the energy dissipat
 However, the case can be made that since this is only a single mode, its contribution to the heating of the bath will be negligible compared with the one as a result of the thermalization with the electronic degrees of freedom.
 
 \section{Methods \label{sec:Cr_Methods}}
-To solve the time evolution of $L$ and $y$ through the differential equations in Eqs.~\ref{eq:Cr_euler_lagrange}, we used the numerical integration methods implemented in the \href{https://github.com/SciML/DifferentialEquations.jl}{DifferentialEquations.jl} package~\cite{rackauckas2017differentialequations}. More specifically, the Tsit5 algorithm was used, which has adaptive time stepping to capture the sharp optical pulses.
+To solve the time evolution of $L$ and $y$ through the differential equations in Eqs.~\ref{eq:Cr_euler_lagrange}, we used the numerical integration methods implemented in the \href{https://github.com/SciML/DifferentialEquations.jl}{DifferentialEquations.jl} package~\cite{rackauckas2017differentialequations}. More specifically, the Tsit5 algorithm was used, which has adaptive time-stepping to capture the sharp optical pulses.
 Originally, the dynamics were fully solved both for $L$ and $y$, but it was confirmed during the fitting process that the dynamics of $L$ are indeed significantly faster than those of $y$.
 Solving dynamics with significantly different timescales is in general hard from the numerical point of view, meaning that taking $L$ to be always at the minimum of the potential makes solving the equations numerically much easier.
 The starting temperature of the bath was fixed at 115 K in all simulations, and the thin film value of $T_N$ was taken, i.e. 290 K which is slightly lower than the bulk Cr Ne\'el temperature of $\sim$ 308 K.
@@ -180,7 +180,7 @@ To aid with the fitting, judicious choices for the starting values of some param
 For example, it was known that the optical pulse width $\tau$ was around 40 fs, and that the oscillation frequency of the PLD $\omega_0 \approx$ 14 THz or equivalently had a period of around 450 fs.
 Furthermore, from previous experiments, the ratio between the heat capacities for the bath and electronic degrees of freedom, $\frac{c_b}{c_L}$, was determined to be around 7 \cite{Nicholson2016}, and the heat transfer rate around 42 $\times$ 10$^{16}$ W/m$^3$ K \cite{Hostetler1999}.
 \\\\
-The time evolution of the system was then solved for each set of trial parameters on an interval from -2 ps to 8 ps, where the lower bound is chosen so that the numerical integration starts from a completely equilibrium initial condition.
+The time evolution of the system was then solved for each set of trial parameters on an interval from -2 ps to 8 ps, where the lower bound is chosen so that the numerical integration starts from a complete equilibrium initial condition.
 This is necessary because when the sharp pulse arrives at 0 ps, some energy already enters the system slightly before 0 ps due to the Gaussian shape.
 The error of the solution $\tilde{x}$ w.r.t. the experimental measurements $x$ is then estimated as the mean square sum $err = \sum_{i=1}^n \frac{(x_i - \tilde{x}_i)^2}{n}$, where $i$ denote the indices of the measurement points.
 The numerical optimization was done through the \href{https://github.com/JuliaNLSolvers/Optim.jl}{Optim.jl} package ~\cite{mogensen2018optim}, where we found that the Nelder-Mead simplex algorithm \cite{Nelder1965} works best for this very non-linear problem.
@@ -208,13 +208,13 @@ The results of this fitting procedure is shown in Fig.~\ref{fig:Cr_theoretical_f
 \end{figure}
 \\\\
 To get a deeper understanding of the underlying effect, we look at the evolution of the free energy surfaces for both order parameters, shown in Fig.~\ref{fig:Cr_energy_surfaces}.
-The characteristic double well potential for $L\neq0$  is clearly visible throughout the simulation.
+The characteristic double-well potential for $L\neq0$  is clearly visible throughout the simulation.
 As expected, we can observe that, when the pulses hit and $T_L$ rapidly increases, the potential for $L$ varies as rapidly, leading in turn to a quick shift of the minimum of the single well potential for $y$, which ultimately results in an oscillation of $y$ due to its relatively slow dynamics.
 While the temperature $T_L$ decreases again, $L$, and consequently the minimum of the potential for $y$, shift back towards their original equilibrium position.
 However, the oscillation of $y$ remains for quite a long time during this shift, since the damping is not particularly large (of the order of 4 ps) compared with the cooling rate of the SDW ($T_L$).
 \\\\
-This already presents us with the first hint at the benefit of indirectly exciting the PLD through the SDW, which we clarify through the use of a thought experiment of a hypothetical system for which the PLD is the primary order parameter with associated double well potential, and with no other coupled order parameters.
-The only possibility to excite an oscillation in this case is by heating up the system above the critical temperature.
+This already presents us with the first hint at the benefit of indirectly exciting the PLD through the SDW, which we clarify through the use of a thought experiment of a hypothetical system for which the PLD is the primary order parameter with associated double-well potential, and with no other coupled order parameters.
+The only possibility to excite an oscillation, in this case, is by heating up the system above the critical temperature.
 This would change the shape of the hypothetical energy potential, shifting its minimum to 0, and again, due to the slow dynamics, an oscillation would occur.
 However, as with any normal oscillator, the value of the PLD would never exceed the starting value during the oscillation, as the thermalization, and restoration of the potential will occur on much longer timescales.
 
@@ -245,7 +245,7 @@ With the damping rate of $y$ taken as the one fitted to the experiment, the maxi
 \\\\
 \begin{figure}
 	\IncludeGraphics[width=0.9\textwidth]{envelope.png}
-	\caption{\label{fig:Cr_control} {\bf Pulse train design.} a), b) Two possible schemes to maximize the oscillation amplitude. In (a) pulses were applied each period, whereas in (b) only every other period. c), d) Two examples of perfect control. In (c) the envelop was taken as one period of a sinusoid followed by a sawtooth with the same width and height. In (d) the envelope consists of a Gaussian followed by an exponential and inverse exponential.}
+	\caption{\label{fig:Cr_control} {\bf Pulse train design.} a), b) Two possible schemes to maximize the oscillation amplitude. In (a) pulses were applied each period, whereas in (b) only every other period. c), d) Two examples of perfect control. In (c) the envelope was taken as one period of a sinusoid followed by a sawtooth with the same width and height. In (d) the envelope consists of a Gaussian followed by an exponential and inverse exponential.}
 \end{figure}
 We can go one step further, however, and design a pulse train such that the oscillation amplitude follows a particular ``signal'' envelope function, demonstrating the incredibly high degree of control over the PLD that this coupled system could allow for.  
 To limit the dimensionality of the manifold of possible solutions, we formulated the following rules:
@@ -256,7 +256,7 @@ To limit the dimensionality of the manifold of possible solutions, we formulated
 	\item The maximum allowed pulses per group is fixed.
 \end{itemize}
 We then tested this procedure on different envelope functions, showcased in Fig.~\ref{fig:Cr_control}(c,d).
-The groups of pulses can be fitted sequentially, since the later pulses do not influence the oscillation caused by the earlier ones.
+The groups of pulses can be fitted sequentially since the later pulses do not influence the oscillation caused by the earlier ones.
 As in the maximum amplitude simulations, the assumption of an infinite $C_b$ was made here.
 This is done so the oscillation equilibrium of $y$ does not change because of the heating due to the pulses.
 The results demonstrate how a carefully chosen pulse train enables indirect, but close to optimal control of the PLD order parameter.
@@ -268,8 +268,8 @@ Moreover, through the use of prisms, a high fluence pulse can be split into many
 This is all to say that technically speaking such pulse trains can be generated, and we are hopeful that such experiments can be performed in the future.
 
 \section{Conclusions}
-In this Chapter we discussed the effects of cross-order coupling beyond quasi-static phenomena.
-The results show that the coupling between the SDW and PLD through exchange striction in Chromium is another prime example of cross-order control, where in this case the perturbation applied by optical pulses to the SDW leads to an excitation in the PLD mode.
+In this Chapter, we discussed the effects of cross-order coupling beyond quasi-static phenomena.
+The results show that the coupling between the SDW and PLD through exchange striction in Chromium is another prime example of cross-order control, where, in this case, the perturbation applied by optical pulses to the SDW leads to an excitation of the PLD mode.
 Moreover, the slower dynamics of the PLD compared to the SDW opens up new behavior and additional dynamical control that would not be possible without the coupling.
 If the PLD would have dynamics on the same timescale as the SDW, changing its potential through exciting the latter would not be very impactful since it would follow the minimum of the potential as fast as the excited SDW would change it.
 \\\\
@@ -277,7 +277,7 @@ Through the use of a relatively simple model, we were able to reproduce the expe
 Together with the remarkable indirect control through the SDW, this model allowed us to design a train of pulses in order to either maximize the PLD oscillation amplitude (up to 450\%), or even make it follow a give envelope function (see Fig.~\ref{fig:Cr_control}).
 The control also allows for the destruction of the PLD oscillation at a moment's notice, leading to a possible shortcut to adiabaticity where the final state is at a higher temperature than the original one.
 \\\\
-Such a control would not have been possible through the direct exciation of the PLD mode, and is thus another clear demonstration of the many benefits that coupled orders might present.
+Such control would not have been possible through the direct excitation of the PLD mode and is thus another clear demonstration of the many benefits that coupled orders might present.
 Whether this can be directly exploited for technological means remains a question, seen as XFELs are rather large.
-However, this behavior through coupled order parameters may be a promising route to a robust coherent control.
-We hope that our understanding, and the demonstration of perfect control in Cr could open the road to finding other similar situations with more technologically viable properties.   
+However, this behavior through coupled order parameters may be a promising route to robust coherent control.
+We hope that our understanding and the demonstration of perfect control in Cr could open the road to finding other similar situations with more technologically viable properties.   
