--- a/papers/DFT/DFT.tex
+++ b/papers/DFT/DFT.tex
@@ -59,7 +59,7 @@ We know that the eigenstates for the periodic potentials found in crystalline sy
 \begin{equation}
 	\Ket{\psi^{\bm{k}}_n} = \eikr{r} \Ket{u^{\bm{k}}_n},
 \end{equation}
-where $\eikr{r}$ denotes the envelope function, and $\Ket{u^{\bm{k}}_n}$ the cell-periodic part (see left hand side of Fig.~\ref{fig:Theory_blochvswan}(a)), and $n$ the band index.
+where $\eikr{r}$ denotes the envelope function, and $\Ket{u^{\bm{k}}_n}$ the cell-periodic part (see left-hand side of Fig.~\ref{fig:Theory_blochvswan}(a)), and $n$ the band index.
 Using a plane-wave basis $\Ket{\phi^{\bm G}}$ such that $\Sandwich{\bm{r}}{\phi^{\bm G}} = e^{i\bm G \cdot \bm r}$, we can write the Bloch Functions as:
 \begin{equation}
 	\label{eq:Theory_bloch_plane}
