--- a/papers/references.bib
+++ b/papers/references.bib
@@ -3973,7 +3973,7 @@ year = {2008}
 }
 
 @misc{Balendhran2015ElementalPhosphorene,
-    title = {{Elemental analogues of graphene: Silicene, germanene, stanene, and phosphorene}},
+    title = {{Elemental analogs of graphene: Silicene, germanene, stanene, and phosphorene}},
     year = {2015},
     booktitle = {Small},
     author = {Balendhran, Sivacarendran and Walia, Sumeet and Nili, Hussein and Sriram, Sharath and Bhaskaran, Madhu},
@@ -4506,7 +4506,7 @@ year = {2015}
     author = {Wilamowski, Z and Jantsch, W},
     number = {2},
     pages = {1--4},
-    keywords = {are controlled by classical, calculators, conduction electron spin resonance, construct a spin based, elec-, electronic device, essors, rashba field, spin proc-, spin relaxation, spintronic, the present attempts to, where spin switches or, zero field splitting}
+    keywords = {are controlled by classical, calculators, conduction electron spin resonance, construct a spin based, elec-, electronic device, essors, rashba field, spin proc-, spin relaxation, spintronic, the present attempts to, where spin switches or, zero-field splitting}
 }
 
 @article{Governale2002SpinCoupling,
